force-app/main/default/objects/Prometheion_Alert_Config__c/Prometheion_Alert_Config__c.object-meta.xml
<CustomObject>
    <description>Configuration for Prometheion compliance alerts including thresholds, channels, and severity levels</description>
    <label>Prometheion Alert Config</label>
    <nameField>
        <label>Alert Config Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Prometheion Alert Configs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>