force-app/main/default/objects/Prometheion_Alert_Config__c/fields/Alert_Type__c.field-meta.xml
<CustomField>
    <fullName>Alert_Type__c</fullName>
    <description>Type of event that triggers this alert</description>
    <label>Alert Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Login</fullName>
            </value>
            <value>
                <fullName>LoginAs</fullName>
            </value>
            <value>
                <fullName>ReportExport</fullName>
                <label>Report Export</label>
            </value>
            <value>
                <fullName>API</fullName>
            </value>
            <value>
                <fullName>PermissionChange</fullName>
                <label>Permission Change</label>
            </value>
            <value>
                <fullName>DataExport</fullName>
                <label>Data Export</label>
            </value>
            <value>
                <fullName>Compliance</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>