force-app/main/default/objects/Prometheion_Alert_Config__c/fields/Channels__c.field-meta.xml
<CustomField>
    <fullName>Channels__c</fullName>
    <description>Notification channels (semicolon-separated: EMAIL;SLACK;PAGERDUTY;BELL)</description>
    <label>Channels</label>
    <length>255</length>
    <type>Text</type>
</CustomField>