force-app/main/default/objects/Prometheion_Alert_Config__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Description of this alert configuration</description>
    <label>Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>