force-app/main/default/objects/Prometheion_Alert_Config__c/fields/Framework__c.field-meta.xml
<CustomField>
    <fullName>Framework__c</fullName>
    <description>Compliance framework this alert applies to</description>
    <label>Framework</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>HIPAA</fullName>
            </value>
            <value>
                <fullName>SOC2</fullName>
                <label>SOC 2</label>
            </value>
            <value>
                <fullName>GDPR</fullName>
            </value>
            <value>
                <fullName>FINRA</fullName>
            </value>
            <value>
                <fullName>NIST</fullName>
            </value>
            <value>
                <fullName>FedRAMP</fullName>
            </value>
            <value>
                <fullName>All</fullName>
                <default>true</default>
                <label>All Frameworks</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>