force-app/main/default/objects/Prometheion_Alert_Config__c/fields/Threshold__c.field-meta.xml
<CustomField>
    <fullName>Threshold__c</fullName>
    <description>Risk score threshold that triggers this alert (0-100)</description>
    <label>Threshold</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>